add loader for the form client and add a categories prioritaire

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,6 @@
 depot:
   path: /
-  controller: App\Controller\DepotController::depot
+  controller: App\Controller\DepotController::depot 
+suivi:
+  path: /suivi
+  controller: App\Controller\ClientController::index 
