--- a/composer.json
+++ b/composer.json
@@ -18,15 +18,19 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "royopa/fpdf-symfony2": "^4.0",
         "sensio/framework-extra-bundle": "^6.1",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.3.*",
         "symfony/console": "5.3.*",
         "symfony/dotenv": "5.3.*",
         "symfony/expression-language": "5.3.*",
+        "symfony/filesystem": "5.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.3.*",
         "symfony/framework-bundle": "5.3.*",
         "symfony/google-mailer": "5.3.*",
         "symfony/http-client": "5.3.*",
+        "symfony/http-foundation": "5.3.*",
+        "symfony/http-kernel": "5.3.*",
         "symfony/intl": "5.3.*",
         "symfony/mailer": "5.3.*",
         "symfony/mime": "5.3.*",
@@ -66,7 +70,11 @@
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "symfony/flex": true,
+            "symfony/runtime": true
+        }
     },
     "autoload": {
         "psr-4": {
