--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,7 +1,6 @@
 depot:
   path: /depot
   controller: App\Controller\DepotController::depot 
-suivi:
-  path: /suivi
+suivie:
+  path: /suivie
   controller: App\Controller\ClientController::index 
-  
