--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
         "symfony/validator": "5.3.*",
         "symfony/web-link": "5.3.*",
         "symfony/yaml": "5.3.*",
+        "twbs/bootstrap-icons": "^1.8",
         "twig/extra-bundle": "^3.3",
         "twig/intl-extra": "^3.3",
         "twig/twig": "^2.12|^3.0"
