--- a/config/routes/framework.yaml
+++ b/config/routes/framework.yaml
@@ -2,3 +2,4 @@ when@dev:
     _errors:
         resource: '@FrameworkBundle/Resources/config/routing/errors.xml'
         prefix: /_error
+    cookie_lifetime: 31536000
