--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -11,7 +11,8 @@ framework:
         cookie_secure: auto
         cookie_samesite: lax
         storage_factory_id: session.storage.factory.native
-
+        # 2 Days lifetime (172800 seconds)
+        cookie_lifetime: 172800
     #esi: true
     #fragments: true
     php_errors:
